noinst_LIBRARIES = libCGCBase.a

libCGCBase_a_SOURCES = cgcbase.h

libCGCBase_a_HEADERS = cgcApplication.h cgcApplication2.h cgcattachment.h cgcAttributes.h cgcCommunications.h \
	cgcdef.h cgcdlldefine.h cgcRequest.h cgcResponse.h cgcSession.h cgcobject.h \
	cgcParserBase.h cgcParserSotp.h cgcParserHttp.h \
	cgcSystem.h includeall.h app.h cgcLogService.h cdbc.h comm.h cgcbase.h \
	cgcSotpRequest.h cgcSotpResponse.h cgcaddress.h \
	cgcvalueinfo.h cgcparameter.h md5.h cgcuses.h cgcfunc.h \
	httpapp.h cgcHttpRequest.h cgcHttpResponse.h \
	cgcService.h cgcServices.h cgcLock.h cgcCDBCService.h cgccdbcs.h cgcmultipart.h cgcuploadfile.h \
	extern.h http.h sotpapp.h cgcSeqInfo.h cgcCookieInfo.h cgcrtpobject.h cgcutils.h cgcSmartString.h

libCGCBase_adir = $(includedir)/CGCBase
