#lib_LTLIBRARIES = libCGCClass.la
#THESOURCES = MethodItem.cpp ModuleItem.cpp Base64.cpp AttributesImpl.cpp \
#        ParseCgcSotp2.cpp SotpCallTable2.cpp PpSotp2.cpp PpHttp.cpp \
#	SotpRtpSession.cpp SotpRtpRoom.cpp SotpRtpSource.cpp
#libCGCClass_la_SOURCES = $(THESOURCES)
#libCGCClass_la_HEADERS = CGCClass.h cgcclassinclude.h clustersvr.h dlldefine.h \
#	IpFormat.h md5.h MethodItem.h ModuleItem.h ParseCgcSotp2.h PpSotp2.h \
#	SotpCallTable2.h AttributesImpl.h Base64.h PpHttp.h XmlParseUpload.h \
#	tchar.h SotpRtpSession.h SotpRtpRoom.h SotpRtpSource.h

#AM_CFLAGS=-fPIC -shared -Wall
#AM_CXXFLAGS=-fPIC -shared -Wall
#libCGCClass_ladir = $(includedir)/CGCClass

lib_LIBRARIES = libCGCClass.a
THESOURCES = MethodItem.cpp ModuleItem.cpp Base64.cpp AttributesImpl.cpp \
	ParseCgcSotp2.cpp SotpCallTable2.cpp PpSotp2.cpp PpHttp.cpp \
	SotpRtpSession.cpp SotpRtpRoom.cpp SotpRtpSource.cpp
libCGCClass_a_SOURCES = $(THESOURCES)
libCGCClass_a_HEADERS = CGCClass.h cgcclassinclude.h clustersvr.h dlldefine.h \
	IpFormat.h md5.h MethodItem.h ModuleItem.h ParseCgcSotp2.h PpSotp2.h \
	SotpCallTable2.h AttributesImpl.h Base64.h PpHttp.h XmlParseUpload.h \
	tchar.h SotpRtpSession.h SotpRtpRoom.h SotpRtpSource.h
AM_CFLAGS=-fPIC -Wall
AM_CXXFLAGS=-fPIC -Wall
libCGCClass_adir = $(includedir)/CGCClass
